<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.fragment.Nahw3Fragment">

            <!-- TODO: Update blank fragment layout -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/grammer"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nahw3_go_to_doctor_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/doctor_book"
                android:textSize="23sp"
                app:drawableRightCompat="@drawable/pdficon" />

            <Button
                android:id="@+id/nahw3_go_to_student_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/student_book"
                android:textSize="23sp"
                app:drawableRightCompat="@drawable/pdficon" />

            <Button
                android:id="@+id/nahw3_go_to_alfetAbnMalk1_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/alet_ebnmalek"
                android:textSize="25sp"
                app:drawableRightCompat="@drawable/pdficon" />

            <Button
                android:id="@+id/nahw3_go_to_lastExams_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:text="@string/last_exams"
                android:padding="20dp"
                android:textSize="25sp"
                app:drawableRightCompat="@drawable/pdficon" />

            <Button
                android:id="@+id/nahw3_go_to_Sharh_alfetAbnMalk1_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/sharh_el_masder"
                android:textSize="23sp"
                app:drawableRightCompat="@drawable/video_icon_24" />

            <Button
                android:id="@+id/nahw3_go_to_Sharh_alfetAbnMalk2_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/naedp"
                android:textSize="23sp"
                app:drawableRightCompat="@drawable/linkicon" />

            <Button
                android:id="@+id/nahw3_go_to_Sharh_alfetAbnMalk2_2_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/naedp_2"
                android:textSize="20sp"
                app:drawableRightCompat="@drawable/linkicon" />

            <Button
                android:id="@+id/nahw3_go_to_Sharh_alfetAbnMalk3_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/_225_226"
                android:textSize="20sp"
                app:drawableRightCompat="@drawable/video_icon_24" />

            <Button
                android:id="@+id/nahw3_go_to_Sharh_alfetAbnMalk4_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/_227_229"
                android:textSize="20sp"
                app:drawableRightCompat="@drawable/video_icon_24" />

            <Button
                android:id="@+id/nahw3_go_to_Sharh_alfetAbnMalk5_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/_230_236"
                android:textSize="20sp"
                app:drawableRightCompat="@drawable/video_icon_24" />


            <Button
                android:id="@+id/nahw3_go_to_Sharh_alfetAbnMalk6_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/_236_241"
                android:textSize="20sp"
                app:drawableRightCompat="@drawable/video_icon_24" />

            <Button
                android:id="@+id/nahw3_go_to_Sharh_alfetAbnMalk7_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/_225_241"
                android:textSize="20sp"
                app:drawableRightCompat="@drawable/video_icon_24" />

            <Button
                android:id="@+id/nahw3_go_to_Sharh_alfetAbnMalk8_book"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/minimzedsharh"
                android:textSize="25sp"
                app:drawableRightCompat="@drawable/video_icon_24" />

            <Button
                android:id="@+id/nahw3_go_to_test1"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/regular"
                android:text="@string/test_self"
                android:textSize="23sp"
                app:drawableRightCompat="@drawable/linkicon" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</layout>
