<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.AdapMasryFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:text="@string/adab_masr"
                    android:textSize="25sp"
                    android:textStyle="bold" />


                <!-- TODO: Update blank fragment layout -->

                <Button
                    android:id="@+id/adapt_go_to_doctor_book_id"

                    android:layout_margin="8dp"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/regular"
                    android:text="@string/doctor_book"
                    android:textSize="23sp"
                    app:drawableRightCompat="@drawable/pdficon" />

                <Button
                    android:id="@+id/adapt_go_to_student_book_id"

                    android:layout_margin="8dp"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/regular"
                    android:text="@string/student_book"
                    android:textSize="23sp"
                    app:drawableRightCompat="@drawable/pdficon" />


                <Button
                    android:id="@+id/adapt_go_to_last_exams_book_id"

                    android:layout_margin="8dp"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/regular"
                    android:text="@string/last_exams"
                    android:textSize="23sp"
                    app:drawableRightCompat="@drawable/pdficon" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>